--- a/static/style.css
+++ b/static/style.css
@@ -1,103 +1,37 @@
 /* style.css --- global stylesheet */
 
 :root {
-	--fg: #000000;
-	--bg: #fffafa; /* snow */
-	font-family: Palatino Linotype, Palatino, Serif;
-}
-
-::selection {
-    background: var(--fg);
-    color: var(--bg);
+    font-family: Palatino Linotype, Palatino, Serif;
 }
 
 body {
-    background: var(--bg);
-    color: var(--fg);
-
     max-width: 72ch;
 
     line-height: 1.5;
 
-    margin: 0px;
+    margin: auto;
     padding: 2ch;
 }
 
-/* Only float the header iff the body is wide enough. */
-@media (max-width: 1366px) and (min-width: 90ch) {
-    body > header {
-        position: absolute;
-        right: 0;
-        top: 0;
-        margin-right: 10px;
-        max-width: 40ch;
-    }
-}
-
-@media (min-width: 1366px) {
-    body {
-        max-with: 768px;
-        margin: auto;
-    }
-}
-
 body > header {
-    background: var(--fg);
-    color: var(--bg);
     padding: 10px;
     margin-right: 0;
-}
-
-/* Invert selection in the header because it’s colours are inversion
-   of the body’s.  Without this, text won’t be selectable. */
-body > header h1::selection, body > header a::selection {
-    background: var(--bg);
-    color: var(--fg);
-}
-
-body > header a {
-    background: var(--fg);
-    color: var(--bg);
+    border: 1px solid;
+    border-radius: 5%;
 }
 
 body > header h1 {
     text-align: right;
     font-variant: small-caps;
-    font-family: DejaVu Sans, Sans;
+    font-family: DejaVu Sans, Sans Serif;
     font-weight: 100;
-}
-
-/* Larger text overlaps body in dark. */
-@media (prefers-color-scheme: dark) {
-    body > header h1 {
-        font-size: 1.5em;
-    }
 }
 
 #avatar {
     width: 10ch;
     border-radius: 50%;
-    float: left;
+    float: right;
     margin-right: 10px;
-}
-
-#avatar[src="*avi.png"] {
-    border: 1px red;
-}
-
-a {
-    color: var(--fg);
-    font-weight: 700;
-    text-decoration: underline 3px;
-}
-
-a:hover {
-    background: var(--fg);
-    border: 4px solid var(--fg);
-    margin: -4px;
-    color: var(--bg);
-    font-weight: bold;
-    text-decoration: none;
 }
 
 ul {
@@ -125,33 +59,16 @@ section.footnotes ol li::marker {
 section.footnotes hr {
     width: 40%;
     border: none;
-    border: 1px solid var(--fg);
+    border: 1px solid;
     margin-left: 0;
-}
-
-footer hr {
-    border: none;
-    border-bottom: 1px dotted var(--fg);
 }
 
 footer {
     font-size: .7em;
     text-align: right;
+    border-top: 1px solid;
 }
 
-@media (prefers-color-scheme: dark) {
-    :root {
-        --fg: #ffffe0; /* lightyellow */
-        --bg: #000000;
-        font-family: Monospace;
-        /* Monospace fonts tend to be a wee bit smaller. */
-        font-size: 1.3em;
-    }
-    ul li {
-        list-style-type: '> ';
-    }
-    section.footnotes ol li::marker {
-        font-weight: 700;
-        font-size: 1em;
-    }
+a.footnote-ref {
+    text-decoration: none;
 }
