--- a/static/style.css
+++ b/static/style.css
@@ -16,8 +16,7 @@ body {
 body > header {
     padding: 10px;
     margin-right: 0;
-    border: 1px solid;
-    border-radius: 5%;
+    border-bottom: 1px solid;
 }
 
 body > header h1 {
