link to linkblog

--- a/partials/_head.html
+++ b/partials/_head.html
@@ -14,7 +14,8 @@
       <h1>@@TITLE@@</h1>
       <nav>
         <a href="index.html">homepage</a> &middot;
-        <a href="https://cadadr.dreamwidth.org">blog</a>
+        <a href="https://cadadr.dreamwidth.org">blog</a> &middot;
+        <a href="linkblog/">linkblog</a>
       </nav>
     </header>
     <section id="content">
