--- a/partials/_head.html
+++ b/partials/_head.html
@@ -15,7 +15,8 @@
       <nav>
         <a href="index.html">homepage</a> &middot;
         <a href="https://cadadr.dreamwidth.org">blog</a> &middot;
-        <a href="linkblog/">linkblog</a>
+        <a href="hacks.html">hacks</a> &middot;
+        <a href="linkblog/index.html">linkblog</a>
       </nav>
     </header>
     <section id="content">
