--- a/partials/_head.html
+++ b/partials/_head.html
@@ -6,7 +6,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/png" href="avi.png"/>
-    <title>@@TITLE@@</title>
+    <title>@@TITLE@@ — gkayaalp.com</title>
     <link rel="stylesheet" href="./style.css"/>
   </head>
   <body>
