static/style.css (body): use serif fonts

--- a/static/style.css
+++ b/static/style.css
@@ -10,7 +10,8 @@ body {
     margin: auto;
     padding: 2ch;
 
-    font-family: Atkinson Hyperlegible, DejaVu Sans, Sans-serif;
+    font-family: Palatino Linotype, Times New Roman, Serif;
+    font-size: 12pt;
 }
 
 body > header {
