static/style.css: style headings so that they can be distinguished and suggest a hierarchy

--- a/static/style.css
+++ b/static/style.css
@@ -94,3 +94,16 @@ footer p {
 a.footnote-ref {
     text-decoration: none;
 }
+
+h1 {
+    font-size: 2em;
+}
+
+h2 {
+    font-size: 1.5em;
+    font-style: oblique;
+}
+
+h3 {
+    font-size: 1em;
+}
